# speex-webrtc-test

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
cmake/: FindWebRTC.cmake
src/: AudioEffect.cpp  AudioEffect.h  AudioLevel.cpp  AudioLevel.h  AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  SpeexDSP.cpp  SpeexDSP.h  Timer.h  WavFileWriter.cpp  WavFileWriter.h  WebRTCDSP.cpp  WebRTCDSP.h  main.cpp
